부트 스트랩 테마 작업중(글쓰기 게시판 메인 테마 작성 완료)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
-  <div style="border: 1px solid gold">
-    Footer영역입니다.
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3 bg-dark text-light fixed-bottom">© 2021 Copyright:
+    <a href="https://velog.io/@ddpound"> YLabVelog</a>
   </div>
+  <!-- Copyright -->
 </footer>
 </html>
