--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,39 @@
 <th:block layout:fragment="script"> </th:block>
 
 <div layout:fragment="content">
-    <div style="border: 1px solid red">
-        index.html 입니다. 즉 컨텐츠 영역
+    <div class="jumbotron bg-dark mt-2">
+        <div class="text-light">
+            <h1>YBlogLab [v0.1 - Prototype]</h1>
+            <p>자유롭게 하고싶은걸 만들고,마음대로 올리는 사이트 입니다</p>
+
+        </div>
+
     </div>
+    <table class="table table-dark">
+        <thead>
+        <tr>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>패치노트</td>
+            <td>Y</td>
+            <td>2021.07.13.09:49</td>
+        </tr>
+        <tr>
+            <td>스프링 부트 JAP란</td>
+            <td>Y</td>
+            <td>2021.07.13.09:50</td>
+        </tr>
+        <tr>
+            <td>깃 주소</td>
+            <td>Y</td>
+            <td>2021.07.13.09:50</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </html>
