--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" href="/board/write">글쓰기</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> 로그인</a>
+                    <a class="nav-link" href="/login"> 로그인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
