--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,9 @@
 <th:block layout:fragment="css"> </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
-<th:block layout:fragment="script"> </th:block>
+<th:block layout:fragment="script">
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
+</th:block>
 
 <div layout:fragment="content">
     <div class="jumbotron bg-dark mt-2">
@@ -17,8 +19,10 @@
             <p>자유롭게 하고싶은걸 만들고,마음대로 올리는 사이트 입니다</p>
 
         </div>
+        <marquee bgcolor="#343A40" width="500px"><label style="color: whitesmoke" id="marqueeText">현재 상태글을 알려주세요</label> </marquee>
 
     </div>
+
     <table class="table table-dark">
         <thead>
         <tr>
@@ -45,5 +49,13 @@
         </tr>
         </tbody>
     </table>
+
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" id="chagestatus" placeholder="현재상태를 쓰시오">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="button" onclick="changemarqueeText()">OK</button>
+            <button class="btn btn-danger" type="button">Cancel</button>
+        </div>
+    </div>
 </div>
 </html>
