--- a/src/main/resources/templates/loginJoin/join.html
+++ b/src/main/resources/templates/loginJoin/join.html
@@ -8,7 +8,46 @@
 <th:block layout:fragment="css"> </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
-<th:block layout:fragment="script"> </th:block>
+<th:block layout:fragment="script">
+<script>
+  function saveUser(){
+    let form = {
+      "email" : $("#email").val(),
+      "username" : $("#username").val(),
+      "password" : $("#pwd").val()
+
+    }
+
+    $.ajax({
+      type: "POST",
+      url: "/join/save",
+      data: JSON.stringify(form),
+      contentType : "application/json; charset=utf-8", //body데이터가 어떤 타입인지 (MIME타입)
+      dataType: "json" // 요청을 서버로 해서 응답이 왔을때, String문자열임
+    }).done(function (resp){
+      if(resp.data === 1 ){
+        alert("회원가입이 완료되었습니다 : "+resp.status)
+        location.href = "/main/index"
+      }else  if(resp.data === 1 ){
+        alert("이미 있는 이메일입니다 : "+resp.status)
+      }else{
+        alert("알수없는에러 : "+resp.status)
+      }
+
+
+
+
+    }).fail(function (){
+      alert("회원가입 실패 (문제확인 해주세요)")
+    })
+
+  }
+
+
+
+</script>
+
+</th:block>
 
 <div layout:fragment="content">
   <div class="form-group">
@@ -16,14 +55,14 @@
     <input type="text" class="form-control" id="email" readonly="readonly"  th:value="${authEmail}">
   </div>
   <div class="form-group">
-    <label for="usr">userName:</label>
-    <input type="text" class="form-control" id="usr">
+    <label for="username">userName:</label>
+    <input type="text" class="form-control" id="username">
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
     <input type="text" class="form-control" id="pwd">
   </div>
-  <button type="button" class="btn btn-dark btn-block">회원가입</button>
+  <button type="button" class="btn btn-dark btn-block" onclick="saveUser()">회원가입</button>
 
 
 </div>
