--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,11 +13,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login"> 로그인</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" >
                     <a class="nav-link" href="/join/emailauth">회원가입</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">(로그인 아이디)</a>
+                <li class="nav-item" th:if="${principal} != null">
+                    <a class="nav-link" href="#" >[[${principal.username}]]</a>
                 </li>
             </ul>
         </div>
