git ignore 깃 설정변경 한거 다시 올림

--- a/src/main/resources/templates/loginJoin/emailauth.html
+++ b/src/main/resources/templates/loginJoin/emailauth.html
@@ -30,9 +30,9 @@
             var form =  {
               'email' : $('#email').val()
             }
-
+            console.log("여기까지작동함?")
             $.ajax({
-                url: "/sendEmail",
+                url: "/auth/sendEmail",
                 type: "POST",
                 dataType:'json',
                 data: JSON.stringify(form),
@@ -43,6 +43,7 @@
                     }
 
                 },error: function (){
+                    console.log("문제발생")
                     alert("문제발생")
                 }
 
@@ -63,14 +64,14 @@
 </th:block>
 
 <div layout:fragment="content">
+
     <div class="form-group">
         <label style="color: #c82333">이메일 인증은 실제 이메일을 사용합니다. 보안 작업이 완료되지않은 사이트니 가입은 신중히 해주세요.</label><br>
         <label for="email">email:</label>
-        <input type="email" class="form-control" id="email">
+        <input type="email" class="form-control" id="email" name="email">
     </div>
     <button type="button" class="btn btn-dark btn-block" onclick="sendEmail()">인증메일 보내기</button>
     <div id="alert"></div>
-
 
 </div>
 </html>
