--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,23 +32,20 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>패치노트</td>
-            <td>Y</td>
-            <td>2021.07.13.09:49</td>
+
+        <tr th:each="items : ${boards}">
+            <td><a th:href=" @{/board/details(id=${items.getId()})}">[[${items.title}]]</a></td>
+            <td th:text="${items.getUser().getUsername()}"></td>
+            <td th:text="${items.getCreateDate()}"></td>
         </tr>
-        <tr>
-            <td>스프링 부트 JAP란</td>
-            <td>Y</td>
-            <td>2021.07.13.09:50</td>
-        </tr>
-        <tr>
-            <td>깃 주소</td>
-            <td>Y</td>
-            <td>2021.07.13.09:50</td>
-        </tr>
+
         </tbody>
     </table>
+    <ul class="pagination justify-content-center">
+
+        <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/(page=${boardsPage.number-1})}">Previous</a></li>
+        <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/(page=${boardsPage.number+1})}">Next</a></li>
+    </ul>
 
     <div class="input-group mb-3">
         <input type="text" class="form-control" id="chagestatus" placeholder="현재상태를 쓰시오">
