--- a/src/main/resources/templates/loginJoin/join.html
+++ b/src/main/resources/templates/loginJoin/join.html
@@ -27,7 +27,7 @@
     }).done(function (resp){
       if(resp.data === 1 ){
         alert("회원가입이 완료되었습니다 : "+resp.status)
-        location.href = "/main/index"
+        location.href = "/"
       }else  if(resp.data === 0 ){
         alert("이미 있는 이메일입니다 : "+resp.status)
       }else{
