--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">게시판</a>
+                    <a class="nav-link" href="/">게시판</a>
                 </li>
                 <li class="nav-item" th:if="${#authorization.expr('isAuthenticated()')}">
                     <a class="nav-link" href="/board/write">글쓰기</a>
@@ -33,7 +33,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">패치노트</a>
+                    <a class="nav-link" href="/auth/patchnote">패치노트</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">실험실</a>
