--- a/src/main/resources/templates/board/boardDetails.html
+++ b/src/main/resources/templates/board/boardDetails.html
@@ -32,8 +32,38 @@
 
   </div>
   <div class="form-group">
-    <label>Content:</label>
     <div th:utext="${board.getContent()}"> </div>
+  </div>
+  <br>
+  <hr />
+<div class="card ">
+  <input id="replyboardid" type="hidden" th:value="${board.getId()}">
+  <div class="card-body"><textarea id="replyContent" class="form-control" style="resize: none" rows="/"></textarea></div>
+  <div class="card-footer d-flex justify-content-end"><button class="btn btn-dark" onclick="saveReply()">작성</button></div>
+
+</div>
+<br>
+  <hr />
+
+  <div class="card">
+    <div class="card-header">댓글 리스트 </div>
+    <ul class="list-group" th:each="reply :${board.getYreplys()}">
+      <script th:inline="javascript">
+        // 보드 Id , Reply id가 들어가야함
+        let replyId = [[${reply.getId()}]]
+      </script>
+      <li class="list-group-item d-flex justify-content-between">
+        <div class="card-body"><label th:text="${reply.getContent()}"></label></div>
+        <div class="d-flex">
+          <div class="font-italic">작성자 :  <label th:text="${reply.getUser().getUsername()}"></label></div>&nbsp;&nbsp;&nbsp;
+          <div th:if="${reply.getUser().getUsername()} == ${#authentication.getName()} or ${#authentication.getName()} == 'Y' ">
+            <button type="button" class="btn btn-danger" onclick="replyDelete(boardId,replyId)">삭제</button>
+          </div>
+
+        </div>
+      </li>
+    </ul>
+
   </div>
 
 
