--- a/src/main/resources/templates/loginJoin/join.html
+++ b/src/main/resources/templates/loginJoin/join.html
@@ -38,21 +38,28 @@
     })
 
   }
+  function handleOnInput(e)  {
+    if(e.value.replace(/[^A-Za-z]/ig, '')==" "){
+      alert("닉네임은 영어로만 지어주세요")
+    }
+    e.value = e.value.replace(/[^A-Za-z]/ig, '')
 
 
+  }
 
 </script>
 
 </th:block>
 
 <div layout:fragment="content">
+  <label style="color: #c82333">사이트니 가입은 신중히 해주세요. 닉네임은 영어로만 지을수 있습니다</label><br>
   <div class="form-group">
     <label for="email">email:</label>
     <input type="text" class="form-control" id="email" readonly="readonly"  th:value="${authEmail}">
   </div>
   <div class="form-group">
     <label for="username">userName:</label>
-    <input type="text" class="form-control" id="username">
+    <input type="text" class="form-control" id="username" oninput=" handleOnInput(this)">
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
