--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 bg-dark text-light" style="margin-top: 45%">© 2021 Copyright:
+  <div class="footer-copyright text-center py-3 text-light" style="margin-top: 15%; background-color: transparent">© 2021 Copyright:
     <a href="https://velog.io/@ddpound"> YLabVelog</a>
   </div>
   <!-- Copyright -->
