--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -7,8 +7,29 @@
     <meta charset="UTF-8" />
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <style >
+        body{
+            background: url("/img/backpiture.jpg");
+            background-color: #010417;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 99.5% 99.5%;
+        }
+        a{
+            transition: 0.7s;
+        }
+        a:link {color: whitesmoke; font-weight: bold; text-decoration: none;}
+        a:visited {color: whitesmoke; font-weight: bold; text-decoration: none;}
+        a:hover {color: darkorange; font-weight: bold; text-decoration: underline;}
+
+
+    </style>
+
     <!-- 컨텐츠페이지의 CSS 영역이 들어감 -->
-    <th:block layout:fragment="css"></th:block>
+    <th:block layout:fragment="css">
+
+
+    </th:block>
 
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
