--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         <div class="col-2"></div>
         <table class="table col-8" style="background-color: transparent; color: whitesmoke;">
             <thead>
-            <tr style="color: #000000;">
+            <tr style="color: whitesmoke;">
                 <th>제목</th>
                 <th>작성자</th>
                 <th>작성일</th>
