--- a/src/main/resources/templates/loginJoin/join.html
+++ b/src/main/resources/templates/loginJoin/join.html
@@ -52,7 +52,7 @@
 </th:block>
 
 <div layout:fragment="content">
-  <label style="color: #c82333">사이트니 가입은 신중히 해주세요. 닉네임은 영어로만 지을수 있습니다</label><br>
+  <label style="color: #c82333">닉네임은 영어로만 지을수 있습니다</label><br>
   <div class="form-group">
     <label for="email">email:</label>
     <input type="text" class="form-control" id="email" readonly="readonly"  th:value="${authEmail}">
