--- a/src/main/resources/templates/loginJoin/login.html
+++ b/src/main/resources/templates/loginJoin/login.html
@@ -43,12 +43,12 @@
 <!-- 시큐리티는 ajax json전송이 아니라 네임값이 들어가야 하는 폼태그 전송이 맞는거같다 -->
 <div layout:fragment="content">
     <form action="/auth/login/try" method="post" id="frm">
-    <div class="form-group">
-        <label for="username">UserName:</label>
+    <div class="form-group align-content-center">
+        <label for="username" class="text-center text-white">UserName</label>
         <input type="text" class="form-control" id="username" name="username">
     </div>
     <div class="form-group">
-        <label for="password">Password:</label>
+        <label for="password" class="text-center text-white">Password</label>
         <input type="password" class="form-control" id="password" name="password">
     </div>
     <button type="button" class="btn btn-dark btn-block" onclick="document.getElementById('frm').submit()">로그인</button>
