--- a/src/main/resources/templates/loginJoin/login.html
+++ b/src/main/resources/templates/loginJoin/login.html
@@ -9,6 +9,7 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 <!--시큐리티 로그인을 이용하기위해 주석처리 -->
    <!-- <script>
         function login(){
@@ -16,7 +17,6 @@
                 'username' : $('#username').val(),
                 'password' : $('#password').val()
             }
-
             $.ajax({
                 type: "POST",
                 url: "/login/try",
@@ -29,12 +29,7 @@
             }).fail(function (){
                 alert("로그인실패")
             })
-
-
-
         }
-
-
     </script>-->
 
 
@@ -53,5 +48,6 @@
     </div>
     <button type="button" class="btn btn-dark btn-block" onclick="document.getElementById('frm').submit()">로그인</button>
     </form>
+    <button type="button" class="btn btn-dark btn-block" onclick="kakaoLogin()">카카오 로그인</button>
 </div>
 </html>
