--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
     <div class="jumbotron mt-2 text-center" style="background-color: transparent;color: black ">
         <div style="font-weight: bold; color: whitesmoke;">
             <p style="letter-spacing: -13px; font-size: 150px; font-family: 한컴돋움">YBlogLab</p>
-            <p>아직 테스트 단계 블로그입니다</p>
+            <p> <label style="color: purple; font-weight: bold">매일</label> 개발 중 입니다.</p>
         </div>
         <div th:if="${nowStatus.getNowStatus()} != null">
         <marquee width="500px"><label th:text="${nowStatus.getNowStatus()}" style="background-color: transparent; font-weight: bold;color: black" id="marqueeText"></label> </marquee>
