--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/auth/emailauth">회원가입</a>
                 </li>
                 <li class="nav-item" th:if="${#authorization.expr('isAuthenticated()')}">
-                    <a class="nav-link" href="#" >로그인 유저 :  [[${#authentication.name}]]</a>
+                    <a class="nav-link" th:href="@{/user/info(username=${#authentication.getName()})}">로그인 유저 :  [[${#authentication.name}]]</a>
                 </li>
                 <li class="nav-item" th:if="${#authorization.expr('isAuthenticated()')}">
                     <a class="nav-link" href="/logout" th:href="@{/logout}">Logout</a>
