--- a/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
@@ -55,7 +55,7 @@
         <div class="col-2"></div>
         <div class="col-8" th:if="${#authentication.getName()} == 'Y'">
             <button type="button" class="btn btn-warning btn-block" onclick="patchboardWriteGo()">글작성하러가기</button>
-            <button type="button" class="btn btn-warning btn-block" onclick="SearchUserDelete()">유저관리하러가기</button>
+            <button type="button" class="btn btn-danger btn-block" onclick="SearchUserDelete()">유저관리하러가기</button>
         </div>
     </div>
 
