--- a/src/main/resources/templates/PatchNoteBoard/patchWrite.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchWrite.html
@@ -26,24 +26,26 @@
 
 <div layout:fragment="content">
 
-    <div class="form-group text-light font-weight-bold bg-dark text-center">
-        <label for="title">[제목]</label>
-        <input type="text" class="form-control bg-dark text-light" id="title">
-    </div>
-    <div class="form-group">
-        <label for="content">Content:</label>
-        <textarea class="form-control summernote" rows="5" id="content"></textarea>
 
+    <div class="form-group container">
+        <div class="form-group text-light font-weight-bold bg-dark text-center rounded">
+            <label for="title">[제목]</label>
+            <input type="text" class="form-control bg-dark text-light" id="title">
+        </div>
+        <textarea class="form-control summernote" rows="5" id="content"></textarea>
+        <button type="button" class="btn btn-warning btn-block" onclick="patchnoteWrite()">작성</button>
     </div>
     <script>
         $('.summernote').summernote({
             placeholder: '글작성 해주세요',
-            tabsize: 2,
-            height: 400
+            maxWidth: 1110,
+            width: 1110,
+            height: 600,
+            lang: 'ko-KR'
         });
     </script>
 
-    <button type="button" class="btn btn-warning btn-block" onclick="patchnoteWrite()">작성</button>
+
 
 
 
