--- a/src/main/resources/templates/PortfolioBoard/boardPortModifyDetails.html
+++ b/src/main/resources/templates/PortfolioBoard/boardPortModifyDetails.html
@@ -20,28 +20,32 @@
 </th:block>
 
 <div layout:fragment="content">
-
+  <div class="form-group container">
   <div class="form-group text-light font-weight-bold bg-dark text-center">
     <label for="title">[제목]</label>
-    <input type="text" class="form-control bg-dark text-light" th:value="${portboard.getTitle()}" id="title">
+    <input type="text" class="form-control bg-dark text-light text-center" th:value="${portboard.getTitle()}" id="title">
   </div>
   <div class="form-group">
-    <label for="content">Content:</label>
     <textarea class="form-control summernote" rows="5" id="content" th:utext="${portboard.getContent()}"></textarea>
 
+    <script th:inline="javascript">
+      let boardId = [[${portboard.getId()}]]
+    </script>
+
+    <button type="button" class="btn btn-warning btn-block" onclick="portboardModify(boardId)">수정하기</button>
+
+  </div>
   </div>
   <script>
     $('.summernote').summernote({
       placeholder: '글작성 해주세요',
-      tabsize: 2,
-      height: 400
+      maxWidth: 1110,
+      width: 1110,
+      height: 600,
+      lang: 'ko-KR'
     });
   </script>
-  <script th:inline="javascript">
-    let boardId = [[${portboard.getId()}]]
-  </script>
 
-  <button type="button" class="btn btn-warning btn-block" onclick="portboardModify(boardId)">수정하기</button>
 
 
 </div>
