--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
 
+    <style>
+        .summernote img{
+            max-width: 100%;
+        }
+
+    </style>
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
@@ -26,24 +32,30 @@
 
 <div layout:fragment="content">
 
-    <div class="form-group text-light font-weight-bold bg-dark text-center">
-        <label for="title">[제목]</label>
-        <input type="text" class="form-control bg-dark text-light" id="title">
-    </div>
-    <div class="form-group">
-        <label for="content">Content:</label>
-        <textarea class="form-control summernote" rows="5" id="content"></textarea>
 
+    <div class="form-group container">
+        <div class="form-group text-light font-weight-bold bg-dark text-center rounded">
+            <label for="title">[제목]</label>
+            <input type="text" class="form-control bg-dark text-light text-center" id="title">
+        </div>
+        <textarea class="summernote" rows="5" id="content" style="resize: none;"></textarea>
+
+        <button type="button" class="btn btn-warning btn-block" onclick="boardWrite()">작성</button>
     </div>
     <script>
         $('.summernote').summernote({
             placeholder: '글작성 해주세요',
-            tabsize: 2,
-            height: 400
+            maxWidth: 1110,
+            width: 1110,
+            height: 600,
+            lang: 'ko-KR'
+
         });
+
+
     </script>
 
-    <button type="button" class="btn btn-warning btn-block" onclick="boardWrite()">작성</button>
+
 
 
 
