--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/auth/patchnote">패치노트</a>
+                    <a class="nav-link" href="/auth/patchnote">패치노트,공지글</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">실험실</a>
