--- a/src/main/resources/templates/loginJoin/emailauth.html
+++ b/src/main/resources/templates/loginJoin/emailauth.html
@@ -70,6 +70,7 @@
         <div style="font-weight: bold; color: whitesmoke;">
             <p style="letter-spacing: -13px; font-size: 150px; font-family: 한컴돋움">Join Membership</p>
             <p>카카오 회원가입으로 간편하게</p>
+            <p><label style="color: red">카카오톡 동의 쪽에 꼭 이메일 체크를 해주셔야 회원가입이 가능합니다!!</label></p>
         </div>
     </div>
 
