--- a/src/main/resources/templates/loginJoin/login.html
+++ b/src/main/resources/templates/loginJoin/login.html
@@ -43,6 +43,7 @@
         <div style="font-weight: bold; color: whitesmoke;">
             <p style="letter-spacing: -13px; font-size: 150px; font-family: 한컴돋움">Login</p>
             <p>처음이시라면 회원가입 부탁드립니다</p>
+            <p><label style="color: red">카카오톡 동의 쪽에 꼭 이메일 체크를 해주셔야 회원가입이 가능합니다!!</label></p>
         </div>
     </div>
 
