--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -43,6 +43,12 @@
         <button type="button" class="btn btn-warning btn-block" onclick="boardWrite()">작성</button>
     </div>
     <script>
+        // 즉 이동감지만 이루어지는걸 확인한다면 임시사진글들은 다 삭제하면 되니깐
+        window.onbeforeunload = function () {
+            // 그럼 어떻게 구분하지 임시인지 아닌지
+            return "감지범위 테스트";
+        };
+
         $('.summernote').summernote({
             maxWidth: 1110,
             width: 1110,
@@ -50,9 +56,18 @@
             focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
             lang: "ko-KR",					// 한글 설정
             placeholder: '최대 2048자까지 쓸 수 있습니다',	//placeholder 설정
-            callbacks: {	//여기 부분이 이미지를 첨부하는 부분
+            callbacks: {
+                //여기 부분이 이미지를 첨부하는 부분
+                // 업로드와 동시에 진행되는 콜백 함수
                 onImageUpload : function(files) {
-                    uploadSummernoteImageFile(files[0],this);
+                    for(i=0;i<files.length;i++){
+                        imageUpload(files[i])
+                        filesArray[i] = files[i]
+                        uploadSummernoteImageFile(files[i],this);
+                    }
+
+                    console.log(filesArray.length)
+
                 },
                 onPaste: function (e) {
                     var clipboardData = e.originalEvent.clipboardData;
@@ -72,33 +87,10 @@
             e.preventDefault();
         })
 
-        /**
-         * 이미지 파일 업로드
-         */
-        function uploadSummernoteImageFile(file, editor) {
-            data = new FormData();
-            data.append("file", file);
-            $.ajax({
-                data : data,
-                type : "POST",
-                url : "/board/uploadSummernoteImageFile",
-                contentType : false,
-                processData : false,
-                success : function(data) {
-                    console.log(data.url)
-                    //항상 업로드된 파일의 url이 있어야 한다.
-                    $(editor).summernote('insertImage', data.url);
-                }
-            });
-        }
+
+
 
     </script>
-
-
-
-
-
-
 
 
 
