--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,9 +53,12 @@
     </div>
 
 
-    <ul class="pagination justify-content-center">
-
+    <ul class="pagination justify-content-center" th:if="${boardsPage.totalPages >= 1 }">
         <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/(page=${boardsPage.number-1})}">Previous</a></li>
+        <th:block th:each="num : ${#numbers.sequence(0, boardsPage.totalPages)}">
+            <li class="page-item "><a class="page-link bg-white text-dark" th:href="@{/(page=${num})}" th:text="${num+1}"></a></li>
+        </th:block>
+
         <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/(page=${boardsPage.number+1})}">Next</a></li>
     </ul>
 
