--- a/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
+++ b/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
@@ -30,6 +30,7 @@
       <tr style="color: whitesmoke;">
         <th>제목</th>
         <th>작성자</th>
+        <th>조회수</th>
         <th>작성일</th>
       </tr>
       </thead>
@@ -38,6 +39,7 @@
       <tr th:each="items : ${boards}">
         <td><a th:href=" @{/auth/portboard/details(id=${items.getId()})}">[[${items.title}]]</a></td>
         <td th:text="${items.getUser().getUsername()}"></td>
+        <td th:text="${items.getCount()}"></td>
         <td th:text="${items.getCreateDate()}"></td>
       </tr>
 
