--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://ybloglab.shop/img/YLabLogo.png">
     <meta property="og:description" content="포트폴리오용 개인 블로그" />
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <style >
