--- a/src/main/resources/templates/admin/userManage.html
+++ b/src/main/resources/templates/admin/userManage.html
@@ -26,7 +26,7 @@
         <button type="button" class="btn btn-outline-danger" id="deleteip" onclick="deleteip()">해당 ip 벤 취소</button><br>
         <button type="button" class="btn btn-outline-danger" id="boarddeleteall" onclick="UserBoardDeleteAll()">게시판글 모두 삭제</button><br>
         <button type="button" class="btn btn-outline-danger" id="alldeleteip" onclick="alldeleteip()">벤 ip 모두 취소</button><br>
-
+        <button type="button" class="btn btn-outline-danger" id="useremailban" onclick="useremailban()">해당 유저 이메일 벤하기</button><br>
         </div>
 
 
